Improved repository pattern. Added simple not finished UI.

--- a/Project/UI/Views/PowerConsumption/Index.cshtml
+++ b/Project/UI/Views/PowerConsumption/Index.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Welcome to </h2>
+<h2>Welcome to "D & N Energetics"</h2>
+<ol class="breadcrumb">
+    <li><a href="/PowerConsumption/Index">Home</a></li>
+    <li><a href="/PowerConsumption/GetData">Get data</a></li>
+</ol>
 
 
