Finished Watcher, XmlReader, TxtLogger, moved connection string to Web.Config(won't be pushed').

--- a/Project/UI/Views/PowerConsumption/GetData.cshtml
+++ b/Project/UI/Views/PowerConsumption/GetData.cshtml
@@ -5,6 +5,7 @@
 
 <h2>Get power consumption data</h2>
 
+<h3>@ViewBag.ErrorMessage</h3>
 <form method="post" action="/PowerConsumption/GetData">
     <div class="input-group">
         <span>From</span>
